fix: finely adjust reaction emoji and count alignment on safari

--- a/src/messaging/components/message/message.css
+++ b/src/messaging/components/message/message.css
@@ -175,17 +175,22 @@
   margin-top: -0.35em;
 }
 
-#app.app--renderer-safari .message-reaction-image {
-  /* Hack: Safari renders emojis a little bit too large, we need to adjust */
-  font-size: 0.9em;
-  margin-top: -0.6em;
-}
-
 .message-reaction-count {
   color: var(--color-grey-dark);
   font-size: 0.8em;
-  margin-top: -0.55em;
+  margin-top: -0.6em;
   margin-left: 1px;
+}
+
+#app.app--renderer-safari .message-reaction-image {
+  /* Hack: Safari renders emojis a little bit too large, we need to adjust */
+  font-size: 0.9em;
+  margin-top: -0.5em;
+}
+
+#app.app--renderer-safari .message-reaction-count {
+  /* Hack: Safari renders emojis a little bit too large, we need to adjust */
+  margin-top: -0.4em;
 }
 
 .message-actions {
